FeuerwehrUpdates/wwwroot/style.css
* {
    padding: 0;
    /* margin: 0; */
    font-family: "Cascadia Code", Arial, Helvetica, sans-serif;
    text-align: center;
    color: white;
    color-scheme: dark;
}

html {
    background-color: rgb(46, 46, 46);
}

h1 {
    font-size: 250%;
    margin: 30px;
}


img {
    display: block;
    margin: auto;
    margin-top: 40px;
}

.content {
    display: block;
}

button {
    margin: 20px;
    padding: 20px;
    background-color: transparent;
    border: 1px solid white;
    border-radius: 10px;
    cursor: pointer;
    transition: background-color 0.5s;
}

button:hover {
    background-color: rgba(92, 92, 92, 0.863);
}

#click {
    background-color: rgba(0, 255, 255, 0.568);
}

#click:hover {
    background-color: rgba(0, 255, 255, 0.863);
}

#information {
    color: rgb(204, 0, 0);
}

footer {
    position: relative;
    bottom: 0px;
    left: 50%;
    transform: translate(-50%, -50%);
    color: white;
    text-decoration: none;
    background-color: #2e2e2ec9;
}

.option {
    margin-right: 10px;
    width: 20px;
    height: 20px;
    margin-top: 109px;

}

.option::before {
    white-space: nowrap;
    margin-left: 30px;
    display: inline-block;
    font-size: 150%;
}


#updateNotifications::before {
    content: 'Get Advanced Notifications too';
}

#updateNotifications {
    display: inline-block;
}

.optionbox {
    display: flex;
    align-items: center;
    justify-content: start;
    margin-left: 100px;
}

h4, h3 {
    margin-top: 30px;
}

.biggerinfos {
    margin-top: 50px;
}

.space {
    margin-bottom: 100px;
}

.einsatzentry {
    width: 50%;
    border: 1px solid white;
    border-radius: 10px;
    margin: auto;
    margin-bottom: 20px;
    cursor: pointer;
}

.einsatzentry > h3 {
    margin-top: 0;
}

